--- a/app/src/main/res/layout/guide_2.xml
+++ b/app/src/main/res/layout/guide_2.xml
@@ -4,25 +4,25 @@
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:layout_height="match_parent"
      android:layout_width="match_parent"
-     android:background="#F5F5F5">
+     android:background="@color/bl">
 
     <LinearLayout
-         android:layout_height="wrap_content"
-         android:layout_width="wrap_content"
+         android:layout_height="match_parent"
+         android:layout_width="match_parent"
          android:gravity="center_horizontal"
          android:orientation="vertical"
          android:layout_gravity="center">
 
         <com.google.android.material.card.MaterialCardView
-             android:layout_height="150dp"
-             android:layout_width="150dp"
-             android:layout_marginBottom="24dp"
+             android:layout_height="100dp"
+             android:layout_width="100dp"
              android:clickable="true"
              app:strokeColor="#E0E0E0"
              app:cardElevation="0dp"
              app:strokeWidth="2dp"
-             app:cardCornerRadius="75dp"
              app:cardBackgroundColor="#DFE2EB"
+             android:layout_marginTop="50dp"
+             app:cardCornerRadius="75dp"
              android:focusable="true"
              android:foreground="?attr/selectableItemBackground">
 
@@ -32,8 +32,8 @@
                  android:gravity="center">
 
                 <ImageView
-                     android:layout_height="100dp"
-                     android:layout_width="100dp"
+                     android:layout_height="60dp"
+                     android:layout_width="60dp"
                      android:scaleType="centerCrop"
                      android:src="@drawable/ic_shield"
                      android:tint="@color/md_theme_primary" />
@@ -47,21 +47,19 @@
              android:layout_width="wrap_content"
              android:gravity="center"
              android:textSize="24sp"
-             android:paddingBottom="8dp"
+             android:paddingBottom="20dp"
              android:textColor="@color/md_theme_primary"
              android:text="用户协议"
              android:textStyle="bold"
-             android:paddingTop="8dp" />
+             android:paddingTop="20dp" />
 
-        <com.google.android.material.textview.MaterialTextView
-             android:layout_height="wrap_content"
-             android:layout_width="wrap_content"
-             android:gravity="center"
-             android:textSize="10sp"
-             android:paddingBottom="8dp"
-             android:textColor="@color/md_theme_outline"
-             android:text="欢迎使用HFSPro，更好的好分数"
-             android:paddingTop="8dp" />
+        <android.webkit.WebView
+             android:layout_height="match_parent"
+             android:layout_width="match_parent"
+             android:background="#F5F5F5"
+             android:id="@+id/webview">
+
+        </android.webkit.WebView>
 
     </LinearLayout>
 
