--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <resources>
 <color name="white">#FFFFFFFF</color>
+<color name="bl">#F5F5F5</color>
     <color name="md_theme_primary">#36618E</color>
     <color name="md_theme_onPrimary">#FFFFFF</color>
     <color name="md_theme_primaryContainer">#D1E4FF</color>
