完成登录逻辑

--- a/app/src/main/res/layout/guide_3.xml
+++ b/app/src/main/res/layout/guide_3.xml
@@ -136,14 +136,20 @@
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:layout_marginTop="16dp"
-                 android:text="如果你的密码不是数字,字母,符号组成，可能登陆失败，需要前往好分数app手机端修改密码或找回密码" />
+                 android:text="如果你的密码不是数字,字母,符号组成，可能提示密码过于简单，需要前往好分数app手机端修改密码或找回密码" />
 
             <com.google.android.material.button.MaterialButton
+            android:id="@+id/loginButton"
                  android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  android:layout_marginTop="16dp"
                  android:text="登陆" />
-
+<com.google.android.material.textview.MaterialTextView
+                 android:layout_height="wrap_content"
+                 android:layout_width="wrap_content"
+                 android:layout_marginTop="16dp"
+                 android:id="@+id/yytext"
+                 android:text="@string/yytoken" />
         </LinearLayout>
 
     </LinearLayout>
