--- a/app/src/main/res/layout/exam_list_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/exam_list_bottom_sheet_dialog.xml
@@ -2,16 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@android:color/white">
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:gravity="center"
         android:text="考试列表"
-        android:textSize="16sp"
-        android:background="#f5f5f5"/>
+        android:textSize="16sp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
