--- a/app/src/main/res/layout/activity_exam.xml
+++ b/app/src/main/res/layout/activity_exam.xml
@@ -11,11 +11,11 @@
          android:layout_width="match_parent">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
-        android:id="@+id/tooltitle"
              android:layout_height="150dp"
              android:layout_width="match_parent"
              app:layout_scrollFlags="scroll|exitUntilCollapsed"
-             app:title="HFSPro">
+             app:title="HFSPro"
+             android:id="@+id/tooltitle">
 
             <com.google.android.material.appbar.MaterialToolbar
                  android:layout_height="?attr/actionBarSize"
@@ -36,6 +36,59 @@
          android:layout_height="match_parent"
          android:layout_width="match_parent"
          app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-         android:id="@+id/nested_scroll_view" />
+         android:id="@+id/nested_scroll_view">
+
+        <LinearLayout
+             android:layout_height="wrap_content"
+             android:layout_width="fill_parent"
+             android:padding="16dp"
+             android:orientation="vertical">
+
+            <com.google.android.material.card.MaterialCardView
+                 android:layout_height="wrap_content"
+                 android:layout_width="fill_parent">
+
+                <LinearLayout
+                     android:layout_height="match_parent"
+                     android:layout_width="match_parent"
+                     android:padding="16dp"
+                     android:orientation="horizontal">
+
+                    <com.google.android.material.progressindicator.CircularProgressIndicator
+                         android:layout_height="50dp"
+                         android:layout_width="50dp"
+                         android:layout_marginRight="5dp"
+                         android:id="@+id/btn_ProgressIndicator" />
+
+                    <com.google.android.material.textview.MaterialTextView
+                         android:layout_height="match_parent"
+                         android:layout_width="wrap_content"
+                         android:layout_marginBottom="0dp"
+                         android:gravity="center"
+                         android:textSize="32sp"
+                         android:textColor="@color/md_theme_primary"
+                         android:id="@+id/scoretext"
+                         android:textStyle="bold"
+                         android:text="114514"
+                         android:layout_gravity="center_vertical" />
+
+                    <com.google.android.material.textview.MaterialTextView
+                    android:fontFamily="sans-serif-thin"
+                    android:id="@+id/manfen"
+                         android:layout_height="match_parent"
+                         android:layout_width="wrap_content"
+                         android:layout_marginBottom="0dp"
+                         android:gravity="center"
+                         android:textSize="32sp"
+                         android:text="/91"
+                         android:layout_gravity="center_vertical" />
+
+                </LinearLayout>
+
+            </com.google.android.material.card.MaterialCardView>
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
