--- a/app/src/main/res/layout/exam_list_item.xml
+++ b/app/src/main/res/layout/exam_list_item.xml
@@ -41,6 +41,7 @@
 
         <com.google.android.material.textview.MaterialTextView
              android:layout_height="wrap_content"
+             android:fontFamily="sans-serif-thin"
              android:layout_width="0dp"
              android:textAppearance="?attr/textAppearanceBodyMedium"
              android:ellipsize="end"
@@ -50,6 +51,19 @@
              android:maxLines="1"
              app:layout_constraintTop_toBottomOf="@+id/exam_name"
              android:id="@+id/exam_time" />
+
+        <com.google.android.material.textview.MaterialTextView
+             android:layout_height="wrap_content"
+             android:layout_width="0dp"
+             android:fontFamily="sans-serif-thin"
+             android:textAppearance="?attr/textAppearanceBodyMedium"
+             android:ellipsize="end"
+             app:layout_constraintStart_toEndOf="@+id/exam_icon"
+             app:layout_constraintEnd_toStartOf="@+id/action_icon"
+             android:layout_marginStart="12dp"
+             android:maxLines="1"
+             app:layout_constraintTop_toBottomOf="@+id/exam_time"
+             android:id="@+id/exam_id" />
 
         <ImageView
              android:layout_height="24dp"
