--- a/app/src/main/res/layout/activity_exam.xml
+++ b/app/src/main/res/layout/activity_exam.xml
@@ -18,6 +18,7 @@
              android:id="@+id/tooltitle">
 
             <com.google.android.material.appbar.MaterialToolbar
+            app:menu="@menu/exam_menu"
                  android:layout_height="?attr/actionBarSize"
                  android:layout_width="match_parent"
                  app:layout_collapseMode="pin"
