添加考试记录

--- a/app/src/main/res/layout/exam_list_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/exam_list_bottom_sheet_dialog.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-     xmlns:android="http://schemas.android.com/apk/res/android"
-     android:layout_height="wrap_content"
-     android:layout_width="match_parent"
-     android:orientation="vertical">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" 
+    android:orientation="vertical">
 
     <TextView
-         android:layout_height="48dp"
-         android:layout_width="match_parent"
-         android:gravity="center"
-         android:textSize="16sp"
-         android:text="考试列表" />
+        android:layout_height="48dp"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:textSize="16sp"
+        android:text="考试列表" />
 
     <androidx.recyclerview.widget.RecyclerView
-         android:layout_height="wrap_content"
-         android:layout_width="match_parent"
-         android:nestedScrollingEnabled="false"
-         android:id="@+id/recyclerView"
-         android:overScrollMode="never" />
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"        
+        android:layout_weight="1"            
+        android:overScrollMode="never" />
 
     <com.google.android.material.button.MaterialButton
-    android:id="@+id/enter_id"
-         android:layout_height="wrap_content"
-         android:layout_width="match_parent"
-         android:layout_marginHorizontal="16dp"
-         android:text="输入examid" />
+        android:id="@+id/enter_id"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:text="输入examid" />
 
 </LinearLayout>
