--- a/app/src/main/res/layout/paper_item_grid.xml
+++ b/app/src/main/res/layout/paper_item_grid.xml
@@ -5,7 +5,10 @@
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:padding="8dp"
-     android:orientation="vertical">
+     android:orientation="vertical"
+android:background="?attr/selectableItemBackground"
+android:clickable="true"
+android:focusable="true">
 
     <LinearLayout
          android:layout_height="wrap_content"
