--- a/app/src/main/res/layout/fragment_answersheet.xml
+++ b/app/src/main/res/layout/fragment_answersheet.xml
@@ -7,17 +7,13 @@
      android:id="@+id/coordinator">
 
 
-    <androidx.core.widget.NestedScrollView
-         android:layout_height="match_parent"
-         android:layout_width="match_parent"
-         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-         android:id="@+id/nested_scroll_view">
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
-        <com.google.android.material.button.MaterialButton
-        android:text="答题卡"
-             android:layout_height="wrap_content"
-             android:layout_width="wrap_content" />
-
-    </androidx.core.widget.NestedScrollView>
+   
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
